[package]
name = "jmt"
version = "0.12.0"
authors = [
    "Penumbra Labs <team@penumbralabs.xyz>",
    "Diem Association <opensource@diem.com>",
]
description = "Jellyfish Merkle Tree"
repository = "https://github.com/penumbra-zone/jmt"
homepage = "https://penumbra.zone"
license = "Apache-2.0"
edition = "2021"

keywords = ["merkle-tree", "authenticated"]
categories = ["cryptography", "data-structures"]
publish = true

[features]
default = ["ics23", "std", "sha2"]
mocks = ["dep:parking_lot"]
blake3_tests = ["dep:blake3"]
std = ["dep:thiserror"]
migration = []

[dependencies]
anyhow = "1.0.38"
borsh = { version = "1.3.0" , features = ["derive", "de_strict_order"]}
digest = "0.10" 
hashbrown = "0.13.2"
itertools = { version = "0.10.0", default-features = false }
mirai-annotations = "1.12.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
parking_lot = { version = "0.12.1", optional = true } 
serde = { version = "1.0.124", features = ["derive"] }
thiserror = { version = "1.0.24", optional = true } 
sha2 = { version = "0.10", optional = true } 
blake3 = { version = "1.4.0", optional = true, features = ["traits-preview"] } 
hex = "0.4"
tracing = "0.1"
ics23 = { version = "0.12.0", optional = true}

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.3" }
parking_lot = { version = "0.12.1" } 
serde_json = { version  = "1.0.95" }
proptest = { version = "1.0.0" }
proptest-derive = { version = "0.3.0" }
sha2 = "0.10"
